# text-embeddings-inference

./: Cargo.toml  Dockerfile  README.md
lambda/: Cargo.toml
lambda/src/: main.rs
